Добавление страниц сайта

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,11 @@
 <header>
     <nav>
         <a href="/">Главная</a>
+        <a href="/catalog">Каталог</a>
+        <a href="/delivery">Доставка и оплата</a>
+        <a href="/sales">Акции</a>
+        <a href="/about">О компании</a>
+        <a href="/contacts">Контакты</a>
         <a href="/sitemap">Карта сайта</a>
 
         <!-- КНОПКА для переключения -->
