--- a/templates/sitemap.html
+++ b/templates/sitemap.html
@@ -4,5 +4,10 @@
 <h1>Карта сайта</h1>
 <ul>
     <li><a href="/">Главная</a></li>
+    <li><a href="/catalog">Каталог</a></li>
+    <li><a href="/delivery">Доставка и оплата</a></li>
+    <li><a href="/sales">Акции</a></li>
+    <li><a href="/about">О компании</a></li>
+    <li><a href="/contacts">Контакты</a></li>
 </ul>
 {% endblock %}
