Добавление структуры главной и каталога

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,21 @@
 {% extends "base.html" %}
 {% block title %}Главная{% endblock %}
 {% block content %}
-<h1>Добро пожаловать!</h1>
+<h1>Сеть магазинов товаров для дома</h1>
+
+<section class="banner">
+    <div class="banner-item">Баннер1</div>
+    <div class="banner-item">Баннер2</div>
+</section>
+
+<section class="news">
+    <h2>Новости</h2>
+    <ul>
+        <li>Новости1</li>
+        <li>Новости2</li>
+        <li>Новости3</li>
+    </ul>
+</section>
+
 <p>Это главная страница сайта сети магазинов товаров для дома.</p>
 {% endblock %}
