--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -3,4 +3,11 @@
 {% block content %}
 <h1>Каталог товаров</h1>
 <p>Тут будет текст</p>
+
+<ul>
+    <li>Посуда</li>
+    <li>Текстиль</li>
+    <li>Декор</li>
+    <li>Хозяйственные товары</li>
+</ul>
 {% endblock %}
