Заполнение главной страницы

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,24 @@
 {% extends "base.html" %}
 {% block title %}Главная{% endblock %}
+
 {% block content %}
-<h1>Сеть магазинов товаров для дома</h1>
+<section class="main">
+    <h1>Сеть магазинов товаров для дома</h1>
+    <p>Товары для уюта, декора вашего дома</p>
+</section>
+
 
 <section class="banner">
-    <div class="banner-item">Баннер1</div>
-    <div class="banner-item">Баннер2</div>
+    <div class="banner-item">Горячие акции недели</div>
+    <div class="banner-item">Новые поступления</div>
 </section>
 
 <section class="news">
     <h2>Новости</h2>
     <ul>
-        <li>Новости1</li>
-        <li>Новости2</li>
-        <li>Новости3</li>
+        <li>Открытие нового магазина</li>
+        <li>Расширение ассортимента товаров</li>
+        <li>Сезонные скидки</li>
     </ul>
 </section>
 
