--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -1,6 +1,26 @@
 {% extends "base.html" %}
 {% block title %}Доставка и оплата{% endblock %}
+
 {% block content %}
 <h1>Доставка и оплата</h1>
+
+<section>
+    <h2>Варианты доставки</h2>
+    <ul>
+        <li>Курьерская доставка в пределах города</li>
+        <li>Самовывоз из магазина</li>
+        <li>Траспортная компания</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Способы оплаты</h2>
+    <ul>
+        <li>Оплата при получении наличные</li>
+        <li>Оплата при получении банковской картой</li>
+        <li>Онлайн оплата на сайте</li>
+    </ul>
+</section>
+
 <p>Здесь будет текст об оплате и доставке</p>
 {% endblock %}
