--- a/templates/sales.html
+++ b/templates/sales.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 {% block title %}Акции{% endblock %}
+
 {% block content %}
 <h1>Акции</h1>
+
 <p>Акции, распродажи, система лояльности</p>
+
+<div class="promo-list">
+    <div class="promo-card">
+        <h3>Горячие предложения</h3>
+        <p>Описание</p>
+    </div>
+</div>
+
 {% endblock %}
