--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
 {% block title %}О компании{% endblock %}
+
 {% block content %}
 <h1>О компании</h1>
-<p>описание сети магазинов кто они, их миссия, и т.д.</p>
+
+<p>Сеть магазинов товаров для дома предлагает широкий ассортимент бытовых и интерьерных товаров: 
+посуда, текстиль, хозяйственные принадлежности, предметы декора. 
+Наша цель — помочь каждому покупателю создать уютное, удобное и функциональное пространство дома.</p>
+
+<h2>Наши ценности</h2>
+<ul>
+    <li>Доступные цены</li>
+    <li>Широкий ассортимент</li>
+    <li>Удобный сервис</li>
+    <li>Онлайн и офлайн формат</li>
+</ul>
+
 {% endblock %}
