--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <a href="/sitemap">Карта сайта</a>
 
         <!-- КНОПКА для переключения -->
-        <button id="vision-toggle">Версия для слабовидящих</button>
+        <button id="vision-toggle" aria-pressed="false" style="margin-left: 12px;">Версия для слабовидящих</button>
     </nav>
 </header>
 
