Работа со стилями на главной странице

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,24 +3,78 @@
 
 {% block content %}
 <section class="main">
-    <h1>Сеть магазинов товаров для дома</h1>
-    <p>Товары для уюта, декора вашего дома</p>
+    <div class="container main-inner">
+        <div class="main-text">
+            <h1>Сеть магазинов товаров для дома</h1>
+            <p>Товары для уюта, декора вашего дома</p>
+            <a class="btn" href="/catalog">Перейти в каталог</a>
+        </div>
+        <img src="/static/img/main.jpg" alt="Товары для дома" class="main-img">
+    </div>
 </section>
 
-
+<!--Баннеры-->
 <section class="banner">
-    <div class="banner-item">Горячие акции недели</div>
-    <div class="banner-item">Новые поступления</div>
+    <div class="container">
+        <div class="banner-item">Скидки до 40% на текстиль</div>
+        <div class="banner-item">Новинки для кухни</div>
+        <div class="banner-item">Бесплатная доставка от 3000 рублей</div>
+    </div>
 </section>
 
-<section class="news">
+<!-- Популярные категории -->
+<section class="container">
+    <h2>Популярные категории</h2>
+    <div class="grid">
+        <div class="card">
+            <img src="/static/img/card1.jpg" alt="текстиль для дома">
+            <div class="body">
+                <h4>Текстиль для дома</h4>
+                <p>Пледы, подушки, покрывала</p>
+                <div class="actions">
+                    <a class="btn" href="/catalog">Смотреть</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/static/img/card2.jpg" alt="товары для кухни">
+            <div class="body">
+                <h4>Товары для кухни</h4>
+                <p>Посуда, хранение, аксессуары</p>
+                <div class="actions">
+                    <a class="btn" href="/catalog">Смотреть</a>
+                </div>
+            </div>
+        </div>
+                <div class="card">
+            <img src="/static/img/card3.jpg" alt="декор">
+            <div class="body">
+                <h4>Декор и интерьер</h4>
+                <p>Вазы, свечи, картины</p>
+                <div class="actions">
+                    <a class="btn" href="/catalog">Смотреть</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Новости -->
+<section class="container">
     <h2>Новости</h2>
-    <ul>
+    <ul class="news-list">
         <li>Открытие нового магазина</li>
-        <li>Расширение ассортимента товаров</li>
-        <li>Сезонные скидки</li>
+        <li>Обновление ассортимента кухонных товаров</li>
+        <li>Сезонные скидки до конца месяца</li>
     </ul>
 </section>
 
-<p>Это главная страница сайта сети магазинов товаров для дома.</p>
+<!-- Преимущества сети магазинов -->
+<section class="benefits">
+    <div class="container benefits-row">
+        <div class="benefit-item">💳 Удобные способы оплаты</div>
+        <div class="benefit-item">📦 Быстрая доставка</div>
+        <div class="benefit-item">🏷 Большой выбор товаров</div>
+        <div class="benefit-item">💬 Поддержка покупателей</div>
+    </div>
+</section>
 {% endblock %}
