--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
 
 <body>
 <header>
+    <div class="container">
+        <div class="logo">HomeStore</div>
     <nav>
         <a href="/">Главная</a>
         <a href="/catalog">Каталог</a>
@@ -18,15 +20,22 @@
         <a href="/about">О компании</a>
         <a href="/contacts">Контакты</a>
         <a href="/sitemap">Карта сайта</a>
-
+        </nav>
         <!-- КНОПКА для переключения -->
-        <button id="vision-toggle" aria-pressed="false" style="margin-left: 12px;">Версия для слабовидящих</button>
-    </nav>
+        <button id="vision-toggle" class="btn secondary" style="margin-left: 12px;">Версия для слабовидящих</button>
+    </div>
 </header>
 
 <main>
     {% block content %}{% endblock %}
 </main>
+
+<footer>
+    <div class="container">
+        <div class="footer-col">© 2025 Сеть магазинов HomeStore</div>
+        <div class="footer-col">Все права защищены</div>
+    </div>
+</footer>
 
 <script>
     const toggle = document.getElementById("vision-toggle");
