--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
     </div>
 </section>
 <!-- Новости -->
-<section class="container">
+<section class="container" style="margin-top: 40px">
     <h2>Новости</h2>
     <ul class="news-list">
         <li>Открытие нового магазина</li>
