Работа над ошибками в страницах

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Каталог{% endblock %}
+
 {% block content %}
-<h1>Каталог товаров</h1>
-<p>Тут будет текст</p>
+<section class="container">
+    <h1>Каталог товаров</h1>
+    <p>Тут будет текст</p>
 
 <ul>
     <li>Посуда</li>
@@ -10,4 +12,6 @@
     <li>Декор</li>
     <li>Хозяйственные товары</li>
 </ul>
+</section>
+
 {% endblock %}
