--- a/templates/catalog/category.html
+++ b/templates/catalog/category.html
@@ -19,5 +19,6 @@
         </div>
         {% endfor %}
     </div>
+    <a href="/catalog" class="btn secondary">← Назад к категориям</a>
 </section>
 {% endblock %}
