--- a/templates/catalog/list.html
+++ b/templates/catalog/list.html
@@ -17,5 +17,6 @@
         </div>
         {% endfor %}
     </div>
+    <a href="/" class="btn secondary">← На главную</a>
 </section>
 {% endblock %}
