Доаботка страниц доставка и акции

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <a href="/sitemap">Карта сайта</a>
         </nav>
         <!-- КНОПКА для переключения -->
-        <button id="vision-toggle" class="btn secondary" style="margin-left: 12px;">Версия для слабовидящих</button>
+        <button id="vision-toggle" class="btn" style="margin-left: 12px;">👁️‍🗨️Версия для слабовидящих</button>
     </div>
 </header>
 
