--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -2,25 +2,22 @@
 {% block title %}Доставка и оплата{% endblock %}
 
 {% block content %}
-<h1>Доставка и оплата</h1>
+<section class="container">
+    <h1>Доставка и оплата</h1>
 
-<section>
-    <h2>Варианты доставки</h2>
-    <ul>
-        <li>Курьерская доставка в пределах города</li>
-        <li>Самовывоз из магазина</li>
-        <li>Траспортная компания</li>
+    <h2>Способы доставки</h2>
+    <ul class = "news-list">
+        <li>Курьерская доставка в пределах города - 1-3 дня</li>
+        <li>Самовывоз из магазина - бесплатно</li>
+        <li>Траспортная компания, почта России - 3-10 дней</li>
     </ul>
-</section>
 
-<section>
     <h2>Способы оплаты</h2>
-    <ul>
+    <ul class="news-list">
         <li>Оплата при получении наличные</li>
         <li>Оплата при получении банковской картой</li>
         <li>Онлайн оплата на сайте</li>
     </ul>
+    <a href="/" class="btn secondary">Назад</a>
 </section>
-
-<p>Здесь будет текст об оплате и доставке</p>
 {% endblock %}
