--- a/templates/about.html
+++ b/templates/about.html
@@ -2,18 +2,25 @@
 {% block title %}О компании{% endblock %}
 
 {% block content %}
-<h1>О компании</h1>
-
-<p>Сеть магазинов товаров для дома предлагает широкий ассортимент бытовых и интерьерных товаров: 
-посуда, текстиль, хозяйственные принадлежности, предметы декора. 
-Наша цель — помочь каждому покупателю создать уютное, удобное и функциональное пространство дома.</p>
-
-<h2>Наши ценности</h2>
-<ul>
-    <li>Доступные цены</li>
-    <li>Широкий ассортимент</li>
-    <li>Удобный сервис</li>
-    <li>Онлайн и офлайн формат</li>
-</ul>
-
+<section class="container about">
+    
+    <div class="about-wrapper">
+        <div class="about*text">
+            <h1>О компании</h1>
+            <p>Сеть магазинов товаров для дома предлагает широкий ассортимент бытовых и интерьерных товаров: 
+            посуда, текстиль, хозяйственные принадлежности, предметы декора. Наша цель — помочь каждому покупателю создать уютное, удобное и функциональное пространство дома.</p>
+            <h2>Наши ценности</h2>
+            <ul class="about-list">
+                <li>Доступные цены</li>
+                <li>Широкий ассортимент</li>
+                <li>Удобный сервис</li>
+                <li>Онлайн и офлайн формат</li>
+            </ul>
+        </div>
+        <div class="about-img">
+            <img src="{{ url_for('static', filename='img/about.jpg') }}" alt="О компании">
+        </div>
+    </div>
+    <a href="/" class="btn secondary">Вернуться на главную</a>
+</section>
 {% endblock %}
