--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -2,27 +2,55 @@
 {% block title %}Контакты{% endblock %}
 
 {% block content %}
-<h1>Контакты</h1>
 
-<section>
+<section class="container">
+    <h1>Контакты</h1>
+    <!-- Адреса и контакты -->
     <h2>Наши магазины</h2>
-    <p>Номера и адреса магазинов, часы работы</p>
+    <div class="grid">
+        <div class="card">
+            <div class="body">
+                <h4>Главный магазин</h4>
+                <p>г. Москва, ул. Центральная, 12</p>
+                <p>Время работы: 09:00 — 22:00. Без выходных.</p>
+                <p><strong>тел. +7 (900) 123-45-67</strong></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="body">
+                <h4>Магазин «Северный»</h4>
+                <p>г. Москва, пр-т Северный, 88</p>
+                <p>Время работы: 09:00 — 22:00. Без выходных.</p>
+                <p><strong>тел. +7 (900) 456-78-90</strong></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="body">
+                <h4>Магазин «Южный»</h4>
+                <p>г. Москва, пр-т Южная, 5</p>
+                <p>Время работы: 09:00 — 22:00. Без выходных.</p>
+                <p><strong>тел. +7 (900) 777-88-99</strong></p>
+            </div>
+    </div>
 </section>
+<!-- Форма обратной связи -->
+<section class="container">
+    <h2 style="margin-top:40px;">Форма обратной связи</h2>
+    
+    <form class="contact-form">
+        <label for="name">Ваше имя</label>
+        <input id="name" type="text" placeholder="Введите имя">
 
-<section>
-    <h2>Форма обратной связи</h2>
-    <form>
-        <label>Ваше имя</label><br>
-        <input type="text" placeholder="Введите имя"><br>
-
-        <label>Ваше имя</label><br>
-        <input type="text" placeholder="Введите имя"><br>
+        <label for="email">Email</label>
+        <input id="email" type="email" placeholder="Введите имя">
         
-        <label>Текст сообщения</label><br>
-        <textarea placeholder="Введите текст"></textarea><br>
+        <label for="message">Текст сообщения</label>
+        <textarea id="message" rows="5" placeholder="Введите текст"></textarea>
         
-        <button type="submit">Отправить</button>
+        <button class = "btn" type="submit" style="margin-top:14px;">Отправить</button>
     </form>
+    <br>
+    <a href="/" class="btn secondary">Вернуться на главную</a>
 </section>
 
 {% endblock %}
