--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -18,6 +18,6 @@
         <li>Оплата при получении банковской картой</li>
         <li>Онлайн оплата на сайте</li>
     </ul>
-    <a href="/" class="btn secondary">Назад</a>
+    <a href="/" class="btn secondary">Вернуться на главную</a>
 </section>
 {% endblock %}
