--- a/templates/sales.html
+++ b/templates/sales.html
@@ -27,6 +27,6 @@
             </div>
         </div>
     </div>
-    <a href="/" class="btn secondary">Назад</a>
+    <a href="/" class="btn secondary">Вернуться на главную</a>
 </section>
 {% endblock %}
