Исправление ошибок на страницы акции и доавбление информации о программе лояльности

--- a/templates/sales.html
+++ b/templates/sales.html
@@ -6,26 +6,45 @@
     <h1>Акции и специальные предложения</h1>
     <div class="grid">
         <div class="card">
-            <img src="/static/img/sales/banner-sale.jpg.jpg" alt="Скидки">
+            <img src="/static/img/sales/banner-sale.jpg" alt="Скидки">
             <div class="body">
                 <h4>Скидки до 50% на текстиль</h4>
                 <p>Только до 31 декабря 2025 большая распродажа с большими скидками на текстиль. Успейте купить в подарок к новому году себе и близким!</p>
             </div>
         </div>
         <div class="card">
-            <img src="/static/img/sales/banner-kitchen.jpg.jpg" alt="Новинки для кухни">
+            <img src="/static/img/sales/banner-kitchen.jpg" alt="Новинки для кухни">
             <div class="body">
                 <h4>Новинки для кухни</h4>
                 <p>Свежий дизайн и новые коллекции</p>
             </div>
         </div>
         <div class="card">
-            <img src="/static/img/sales/banner-delivery.jpg.jpg" alt="Бесплатная доставка">
+            <img src="/static/img/sales/banner-delivery.jpg" alt="Бесплатная доставка">
             <div class="body">
                 <h4>Бесплатная доставка</h4>
                 <p>При заказе от 3000 ₽</p>
             </div>
         </div>
+    </div>
+    <div class="loyalty">
+    <h2>Карта лояльности HomeStore</h2>
+    <p>Получайте бонусы за покупки, участвуйте в закрытых распродажах и экономьте до 15% каждый месяц.</p>
+
+        <div class="loyalty-cards">
+            <div class="loyalty-item">
+                <h4>Базовая карта</h4>
+                <p>Начисление 3% бонусов на все покупки.</p>
+            </div>
+            <div class="loyalty-item">
+                <h4>Серебряная карта</h4>
+                <p>Бонусы 7%, персональные предложения.</p>
+            </div>
+            <div class="loyalty-item">
+                <h4>Платиновая карта</h4>
+                <p>Бонусы 12%, бесплатная доставка, VIP-скидки.</p>
+            </div>
+            </div>
     </div>
     <a href="/" class="btn secondary">Вернуться на главную</a>
 </section>
