--- a/static/css/style.css
+++ b/static/css/style.css
@@ -339,3 +339,38 @@ p{margin:0 0 12px}
     min-height: 120px;
     resize: vertical;
 }
+/* для страницы акции, описание программы лояльности */
+.loyalty {
+    background: var(--panel);
+    padding: 40px;
+    border-radius: 14px;
+    margin: 40px 0;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+}
+
+.loyalty h2 {
+    margin-bottom: 12px;
+}
+
+.loyalty-cards {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
+
+.loyalty-item {
+    background: white;
+    flex: 1 1 240px;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    transition: 0.25s;
+}
+
+.loyalty-item:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 18px rgba(0,0,0,0.08);
+}
+
+
