--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <h2>Популярные категории</h2>
     <div class="grid">
         <div class="card">
-            <img src="/static/img/card1.jpg" alt="текстиль для дома">
+            <img src="/static/img/categories/card1.jpg" alt="текстиль для дома">
             <div class="body">
                 <h4>Текстиль для дома</h4>
                 <p>Пледы, подушки, покрывала</p>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="/static/img/card2.jpg" alt="товары для кухни">
+            <img src="/static/img/categories/card2.jpg" alt="товары для кухни">
             <div class="body">
                 <h4>Товары для кухни</h4>
                 <p>Посуда, хранение, аксессуары</p>
@@ -47,7 +47,7 @@
             </div>
         </div>
                 <div class="card">
-            <img src="/static/img/card3.jpg" alt="декор">
+            <img src="/static/img/categories/card3.jpg" alt="декор">
             <div class="body">
                 <h4>Декор и интерьер</h4>
                 <p>Вазы, свечи, картины</p>
